# kail_location

./: .gitignore  README.md  README_EN.md  build.gradle.kts  settings.gradle.kts  项目技术文档.md
.github/workflows/: build.yml
KailLocationXposed/app/: build.gradle.kts
KailLocationXposed/app/release/: output-metadata.json
KailLocationXposed/app/release/baselineProfiles/0/: app-release.dm
KailLocationXposed/app/release/baselineProfiles/1/: app-release.dm
KailLocationXposed/app/src/main/: AndroidManifest.xml
NewBlackbox/Bcore/: build.gradle.kts
NewBlackbox/Bcore/src/main/java/top/niunaijun/blackbox/: BlackBoxCore.java
NewBlackbox/Bcore/src/main/java/top/niunaijun/blackbox/utils/: AbiUtils.java
NewBlackbox/app/: build.gradle  build.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: inject.dex
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/lhooker/: lhooker.cpp
app/src/main/cpp/native_hook/: hook.cpp  sensor_simulator.cpp  sensor_simulator.h
app/src/main/cpp/ptrace_inject/: main.cpp  ptrace_utils.cpp  ptrace_utils.h
app/src/main/cpp/root/: README.md  elf_hooker.h  fakeloc_common.h  inject.cpp  inject64.cpp  libStepSensor.cpp  libantidetect.cpp  libfakeloc_apphook.cpp  libfakeloc_init.cpp  libfakeloc_initzygote.cpp  liblhooker.cpp
app/src/main/cpp/root_hook/: entry.cpp
app/src/main/java/com/kail/location/ads/: NativeAdLoader.kt
app/src/main/java/com/kail/location/auth/: AuthManager.kt  UsageManager.kt
app/src/main/java/com/kail/location/data/local/: AppDatabase.kt  HistoryDao.kt  HistoryEntity.kt
app/src/main/java/com/kail/location/inject/utils/: InjectLog.java  MockLocationHookManager.java  MockStepSensorManager.java
app/src/main/java/com/kail/location/lib/lhooker/: ArtMethodProbe.java  LHooker.java
app/src/main/java/com/kail/location/models/: CellInfo.kt  HistoryRecord.kt  RouteModels.kt  WifiInfo.kt
app/src/main/java/com/kail/location/network/: OpenCellIdClient.kt  RuoYiClient.kt  WigleClient.kt
app/src/main/java/com/kail/location/repositories/: DataBaseHistoryLocation.kt  DataBaseHistorySearch.kt  HistoryRepository.kt  RootMockRepository.kt
app/src/main/java/com/kail/location/root/: CellInfoBuilder.kt  CellInfoData.kt  DynamicProxyFactory.kt  FusedLocationHook.kt  LHooker.kt  LocationData.kt  LocationHookController.kt  MockLocationManagerStub.kt  MockSensorManagerStub.kt  MockWifiManagerStub.kt  NativeSensorHook.kt  RootCommandHandler.kt  RootConfigManager.kt  RootHookEntry.kt  RootInjectionEntry.kt  RootModeClient.kt  SensorHookController.kt  ServiceManagerHijacker.kt  SystemLocationHook.kt  TelephonyServiceHook.kt  TraceHider.kt  WifiHookController.kt  WifiInfoData.kt  WifiServiceHook.kt
app/src/main/java/com/kail/location/sandbox/: SandboxManager.kt  SandboxSettingsManager.kt  SandboxStepConfig.kt
app/src/main/java/com/kail/location/service/: ServiceGo.kt  ServiceGoNoroot.kt  ServiceGoRoot.kt
app/src/main/java/com/kail/location/service/Developer/: MockLocationProvider.kt  ServiceGoDeveloper.kt
app/src/main/java/com/kail/location/service/Root/: RootDeployer.kt  RootHookManager.kt  ServiceGoRoot.kt
app/src/main/java/com/kail/location/service/Sandbox/: SandboxLocationHook.kt  ServiceGoSandbox.kt
app/src/main/java/com/kail/location/service/Xposed/: ServiceGoXposed.kt
app/src/main/java/com/kail/location/utils/: DataTransferManager.kt  GoApplication.kt  GoUtils.kt  KailLog.kt  ShellUtils.kt  UpdateChecker.kt
app/src/main/java/com/kail/location/utils/service/: RouteEngine.kt  ServiceConstants.kt  ServiceNotificationHelper.kt
app/src/main/java/com/kail/location/viewmodels/: CellSimulationViewModel.kt  HistoryViewModel.kt  IndependentSimulationViewModel.kt  JoystickViewModel.kt  LocationPickerViewModel.kt  LocationSimulationViewModel.kt  NavigationSimulationViewModel.kt  RootAppHideViewModel.kt  RouteSimulationViewModel.kt  SandboxViewModel.kt  SettingsViewModel.kt  SponsorViewModel.kt  WelcomeViewModel.kt  WifiSimulationViewModel.kt
app/src/main/java/com/kail/location/views/auth/: LoginActivity.kt  LoginScreen.kt
app/src/main/java/com/kail/location/views/cellsimulation/: CellSimulationActivity.kt  CellSimulationScreen.kt
app/src/main/java/com/kail/location/views/common/: AnnouncementDialog.kt  AppDrawer.kt  DrawerHeader.kt
app/src/main/java/com/kail/location/views/history/: HistoryScreen.kt
app/src/main/java/com/kail/location/views/independentsimulation/: IndependentSimulationActivity.kt  IndependentSimulationScreen.kt
app/src/main/java/com/kail/location/views/joystick/: FloatingNavigationControlOverlay.kt  JoyStick.kt  JoyStickRouteControlOverlay.kt  JoystickAuxOverlays.kt  JoystickRoot.kt  JoystickWindowManager.kt
app/src/main/java/com/kail/location/views/locationpicker/: LocationPickerActivity.kt  LocationPickerScreen.kt
app/src/main/java/com/kail/location/views/locationsimulation/: LocationSimulationActivity.kt  LocationSimulationScreen.kt
app/src/main/java/com/kail/location/views/navigationsimulation/: NavigationSimulationActivity.kt  NavigationSimulationScreen.kt
app/src/main/java/com/kail/location/views/nfcsimulation/: NfcSimulationActivity.kt  NfcSimulationContract.kt  NfcSimulationScreen.kt  NfcSimulationViewModel.kt
app/src/main/java/com/kail/location/views/routesimulation/: RoutePlanScreen.kt  RouteSimulationActivity.kt  (+1 more)
app/src/main/java/com/kail/location/xposed/: FakeLocState.kt
app/src/main/java/top/niunaijun/blackbox/: BlackBoxCore.java
app/src/main/java/top/niunaijun/blackbox/app/: LauncherActivity.java
app/src/main/res/menu/: menu_nav.xml
app/src/main/res/values/: arrays.xml  colors.xml  ids.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
docs/: architecture-zh.md  项目技术文档.md
gradle/: libs.versions.toml
(+35 files in other folders)
